🐛 Fix date alignment being wrong

--- a/src/app/components/graphs/overview/overview.component.scss
+++ b/src/app/components/graphs/overview/overview.component.scss
@@ -1,6 +1,7 @@
 .chart-container {
   width: 100%;
-  height: 600px;
+  min-height: 0px;
+  max-height: 600px;
   vertical-align: top;
   overflow: auto;
 }
